--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -50,11 +50,11 @@
   text-align: left;
 }
 
-.perguntas dd {
+.js .perguntas dd {
   display: none;
 }
 
-.perguntas dd.ativa {
+.js .perguntas dd.ativa {
   display: block;
 }
 
